# robot-ml-web-app

./: .env  .env.example  .gitignore  CHANGELOG.md  CURRICULUM.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SYSTEM_DESIGN.md  VANILLA_JS_IMPLEMENTATION.md  design.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_robots.py  002_create_users.py  e9724f8de6e8_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/adapters/: __init__.py  llm_client.py  mqtt_client.py  storage_client.py  vector_store.py
backend/app/api/: deps.py  router.py
backend/app/api/chatbot/: router.py
backend/app/api/ml/: router.py
backend/app/api/robot_api/: router.py
backend/app/api/telemetry/: router.py
backend/app/api/v1/: auth.py  chatbot.py  database.py  dependencies.py  ml.py  robot_control.py  robots.py  router.py  schemas.py  simulation.py  telemetry.py  websocket.py
backend/app/api/v1/endpoints/: audit.py  auth.py  datasets.py  rag.py  recordings.py  robots.py  sensors.py  users.py
backend/app/api/ws/: router.py
backend/app/application/: __init__.py  events.py
backend/app/application/interfaces/: __init__.py  messaging.py  realtime.py  repositories.py  unit_of_work.py
backend/app/application/use_cases/: __init__.py  chat.py  ml.py  robot.py  telemetry.py
backend/app/auth/: __init__.py  auth.py
backend/app/config/: secrets.py  settings.py
backend/app/core/: __init__.py  base_dependencies.py  config.py  database.py  dependencies.py  events.py  exceptions.py  logger.py  logging.py  mqtt.py  security.py  websocket.py
backend/app/database/: engine.py  session.py
backend/app/database/migrations/: env.py
backend/app/domain/entities/: __init__.py  audit_log.py  dataset.py  rag_document.py  recording.py  robot.py  sensor_data.py  user.py
backend/app/domain/repositories/: __init__.py  audit_repository.py  base.py  dataset_repository.py  rag_repository.py  recording_repository.py  robot_repo.py  robot_repository.py  sensor_data_repository.py  user_repo.py  user_repository.py
backend/app/domain/services/: audit_service.py  dataset_service.py  rag_service.py  recording_service.py
backend/app/features/chat/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/features/ml/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/features/robot/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/features/telemetry/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/grpc_client/: .gitignore  __init__.py  client.py  fleet_pb2.py  fleet_pb2_grpc.py
backend/app/grpc_server/: __init__.py  server.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  connection.py  models.py  session.py  unit_of_work.py
backend/app/infrastructure/factories/: __init__.py  telemetry.py
backend/app/infrastructure/grpc/: gateway_client.py
backend/app/infrastructure/llm/: embedding.py  embeddings.py  ollama_client.py  rag_pipeline.py  retriever.py
backend/app/infrastructure/messaging/: __init__.py  topics.py
backend/app/infrastructure/mqtt/: client.py  topics.py
backend/app/infrastructure/realtime/: __init__.py  handlers.py  manager.py  subscriptions.py
backend/app/infrastructure/redis/: connection.py  recording_worker.py
backend/app/infrastructure/storage/: media_manager.py
backend/app/infrastructure/websocket/: connection_manager.py
backend/app/jobs/: __init__.py  data_export_job.py  rag_indexing_job.py  training_job.py
backend/app/models/: __init__.py  base.py  chat.py  command_data.py  dataset.py  dataset_session.py  ml_model.py  models.py  rag_document.py  robot.py  robot_state.py  sensor_data.py  training_metric.py  training_run.py
backend/app/repositories/: __init__.py  base.py  chat.py  chatbot_repository.py  dataset.py  dataset_sessions.py  ml_model.py  rag_documents.py  robot.py  robot_repository.py  robot_state.py  sensor_data.py  telemetry_repository.py  training_metrics.py  training_repository.py  training_runs.py
backend/app/routers/: __init__.py  auth.py  command_data.py  missions.py  robots.py  sensor_data.py
backend/app/schemas/: __init__.py  chat.py  chatbot.py  database.py  ml.py  robot.py  schemas.py  telemetry.py  training.py
backend/app/services/: __init__.py  chatbot_engine.py  chatbot_service.py  datalogger.py  gateway_client.py  ml_pipeline.py  robot_control.py  robot_control_service.py  simulation_service.py  telemetry_processor.py  telemetry_service.py  training_service.py
backend/app/services/chatbot/: __init__.py  chatbot_service.py
backend/app/services/database/: __init__.py  image_storage_service.py  recording_service.py
backend/app/services/ml/: __init__.py  training_service.py
backend/app/services/robot_control/: __init__.py  robot_service.py  simulator_service.py
backend/app/tests/: conftest.py  test_chatbot.py  test_ml_service.py  test_robot_api.py  test_startup.py  test_telemetry.py
backend/app/tests/integration/: test_end_to_end.py
backend/app/utils/: __init__.py  constants.py  formatters.py  helpers.py  logger.py  validators.py
backend/app/websocket/: handlers.py  manager.py  subscriptions.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py  training_worker.py
backend/tests/: conftest.py  test_domain.py  test_rag_service.py  test_security.py
database/: init.sql
(+311 files in other folders)
