[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-ml-web-app"
version = "0.1.0"
description = "FastAPI backend for robot control and ML orchestration"
authors = [{ name = "takas" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "SQLAlchemy>=2.0.25",
    "pydantic>=1.10.14",
    "python-multipart>=0.0.9",
    "alembic>=1.13.1",
    "asyncio-mqtt>=0.16.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.26.0",
    "ruff>=0.2.1",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "PL", "B"]
ignore = ["D"]
