# =============================================================================
# Step 11: Python プロジェクト設定（データ記録ライブラリ追加）
# =============================================================================
#
# 【Step 8 からの追加ライブラリ（Step 11）】
# - redis[hiredis]: Redis 非同期クライアント（Streams, Pub/Sub）
# - structlog: 構造化ログ（JSONフォーマットのログ出力）
#
# 【なぜ redis + structlog？】
# redis: Redis Streams でセンサーデータの記録・読み取りを行う
# structlog: 従来の print() による出力を構造化ログに置き換え、
#            ログの検索・分析を容易にする
#
# =============================================================================

[project]
name = "robot-backend"
version = "0.4.0"
description = "Robot AI Web App — FastAPI バックエンド（データ記録対応）"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    # --- Step 7: DB ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # --- Step 8: 認証 ---
    "passlib[bcrypt]>=1.7.4",    # パスワードハッシュ（bcrypt）
    "python-jose[cryptography]>=3.3.0",  # JWT トークン
    "bcrypt>=4.0.0",             # bcrypt バックエンド
    # --- Step 11: データ記録 ---
    "redis[hiredis]>=5.0.0",     # Redis 非同期クライアント + 高速パーサー
    "structlog>=24.1.0",         # 構造化ログ
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
