# =============================================================================
# Step 12: Python プロジェクト設定（RAG ライブラリ追加）
# =============================================================================
#
# 【Step 11 からの追加ライブラリ（Step 12）】
# - httpx: 非同期HTTPクライアント（Ollama API 呼び出し用）
# - pypdf: PDF テキスト抽出（ドキュメントアップロード用）
#
# 【なぜ httpx？】
# Ollama は HTTP API を提供するので、Python から呼び出すには HTTP クライアントが必要。
# httpx は async/await 対応の高性能 HTTP クライアントで、FastAPI との相性が良い。
# requests と API が似ているが、非同期処理に対応している点が異なる。
#
# 【なぜ pypdf？】
# PDF ファイルからテキストを抽出するためのライブラリ。
# RAG ではアップロードされた PDF のテキストを読み取り、
# チャンクに分割してベクトル化する必要がある。
#
# =============================================================================

[project]
name = "robot-backend"
version = "0.5.0"
description = "Robot AI Web App — FastAPI バックエンド（RAG対応）"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    # --- Step 7: DB ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # --- Step 8: 認証 ---
    "passlib[bcrypt]>=1.7.4",    # パスワードハッシュ（bcrypt）
    "python-jose[cryptography]>=3.3.0",  # JWT トークン
    "bcrypt>=4.0.0",             # bcrypt バックエンド
    # --- Step 11: データ記録 ---
    "redis[hiredis]>=5.0.0",     # Redis 非同期クライアント + 高速パーサー
    "structlog>=24.1.0",         # 構造化ログ
    # --- Step 12: RAG ---
    "httpx>=0.27.0",             # 非同期HTTPクライアント（Ollama API用）
    "pypdf>=4.0.0",              # PDFテキスト抽出
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
