# =============================================================================
# Step 13: Python プロジェクト設定（本番対応版）
# =============================================================================
#
# 【Step 12 からの変更点（Step 13）】
# - バージョンを 1.0.0 に更新（本番リリース）
# - gunicorn 依存を追加（本番用プロセスマネージャー）
#
# 【なぜ gunicorn？】
# uvicorn は開発用には最適だが、本番では複数ワーカーを管理する
# プロセスマネージャーが必要。gunicorn がその役割を担う。
# gunicorn + uvicorn.workers.UvicornWorker の組み合わせが本番の定番。
#
# =============================================================================

[project]
name = "robot-backend"
version = "1.0.0"
description = "Robot AI Web App — FastAPI バックエンド（本番対応）"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    # --- Step 7: DB ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # --- Step 8: 認証 ---
    "passlib[bcrypt]>=1.7.4",    # パスワードハッシュ（bcrypt）
    "python-jose[cryptography]>=3.3.0",  # JWT トークン
    "bcrypt>=4.0.0",             # bcrypt バックエンド
    # --- Step 11: データ記録 ---
    "redis[hiredis]>=5.0.0",     # Redis 非同期クライアント + 高速パーサー
    "structlog>=24.1.0",         # 構造化ログ
    # --- Step 12: RAG ---
    "httpx>=0.27.0",             # 非同期HTTPクライアント（Ollama API用）
    "pypdf>=4.0.0",              # PDFテキスト抽出
    # --- Step 13: 本番 ---
    "gunicorn>=22.0.0",          # 本番用プロセスマネージャー
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
